// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox/> Render checkbox 1`] = `
<div
  className="form-group row"
>
  <div
    className="form-label col-sm-2"
  >
    <label
      className="form-label"
      htmlFor="1"
    >
      Test label
    </label>
  </div>
  <div
    className="form-check col-sm-9"
  >
    <input
      checked={true}
      id="1"
      type="checkbox"
    />
    <small
      className="form-text text-muted"
    >
      Some help text
    </small>
  </div>
</div>
`;

exports[`<Checkbox/> Render uncheked checkbox 1`] = `
<div
  className="form-group row"
>
  <div
    className="form-label col-sm-2"
  >
    <label
      className="form-label"
      htmlFor="2"
    >
      Test label
    </label>
  </div>
  <div
    className="form-check col-sm-9"
  >
    <input
      id="2"
      type="checkbox"
    />
    <small
      className="form-text text-muted"
    >
      Some help text
    </small>
  </div>
</div>
`;
